# mc-client

./: .gitignore  Cargo.toml  README.md
conf/: config.toml
src/: main.rs
src/client/: client.rs  console.rs  mod.rs
src/client/msg/: mapper.rs  mod.rs
src/client/msg/login/: handshake.rs  login_plugin_response.rs  login_start.rs
src/client/msg/play/: confirm_tp.rs  keep_live.rs  mod.rs  respawn.rs
src/client/parser/login/: login_plugin_request.rs  login_success.rs  mod.rs  set_compression.rs
src/client/parser/play/: change_difficulty.rs  keep_live.rs  mod.rs  server_data.rs  sync_player_position.rs
src/config/: buffer.rs  factory.rs  general.rs  log.rs  mod.rs
src/core/: client.rs  console.rs  display.rs  mod.rs
src/core/msg/: mapper.rs
src/core/msg/login/: handshake.rs  login_plugin_response.rs  login_start.rs
src/core/msg/play/: chat_command.rs  chat_message.rs  client_information.rs  confirm_tp.rs  keep_live.rs  mod.rs  plugin_message.rs  respawn.rs
src/core/parser/: mapper.rs  mod.rs
src/core/parser/login/: login_plugin_request.rs  login_success.rs  set_compression.rs
src/core/parser/play/: change_difficulty.rs  disconnect.rs  disguised_chat_message.rs  keep_live.rs  mod.rs  plugin_message.rs  server_data.rs  set_experience.rs  set_health.rs  sync_player_position.rs  system_chat_message.rs  update_time.rs
src/itti/: basis.rs  mod.rs  reader.rs  writer.rs
src/msg/: confirm_tp.rs  handshake.rs  keep_live.rs  login_mod_check.rs  login_start.rs  mod.rs
src/msg/login/: handshake.rs  login_plugin_response.rs  login_start.rs  mod.rs
src/parse/: keep_live.rs  login_success.rs  mod.rs  set_compression.rs  sync_player_position.rs
src/parser/: mapper.rs
src/parser/login/: login_plugin_request.rs  login_success.rs  mod.rs  set_compression.rs
src/parser/play/: change_difficulty.rs  keep_live.rs  mod.rs  server_data.rs  sync_player_position.rs
src/util/: mod.rs  split.rs  tcp_split.rs  transfer.rs  zlib.rs
src/yggdrasil/: authenticate.rs  mod.rs  refresh.rs
src/yggdrasil/msg/: authenticate.rs  mod.rs  refresh.rs
