[package]
name = "mc-client"
version = "0.1.0"
edition = "2021"
authors = ["Karenina-na"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Karenina-na/mc-client"
rust-version = "1.76.0"
description = "A simple Minecraft client written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.11.2"
flate2 = "1.0.28"
toml = "0.8.10"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
prettytable-rs = "0.10.0"
colored = "2.1.0"

[[bin]]
name = "mc-client"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true